@@ -1,7 +1,7 @@
 Package: tsgam
 Type: Package
 Title: Interface to mgcv
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: c(person("Alexios", "Galanos", role = c("aut", "cre"),
     email = "alexios@4dscape.com"))
 Maintainer: alexios galanos <alexios@4dscape.com>
