@@ -1,8 +1,15 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(estimate,gam.spec)
+S3method(fitted,gam.estimate)
 S3method(predict,gam.estimate)
+S3method(residuals,gam.estimate)
+S3method(summary,gam.estimate)
 S3method(tsbacktest,gam.trainspec)
+S3method(tsdecompose,gam.estimate)
+S3method(tsdecompose,gam.predict)
+S3method(tsmetrics,gam.estimate)
+S3method(tsmetrics,gam.predict)
 export(gam_modelspec)
 export(gam_trainspec)
 import(data.table)
@@ -14,7 +21,10 @@ importFrom(future.apply,future_lapply)
 importFrom(gratia,predicted_samples)
 importFrom(progressr,handlers)
 importFrom(progressr,progressor)
+importFrom(stats,AIC)
 importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,fitted)
 importFrom(stats,gaussian)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
@@ -25,6 +35,7 @@ importFrom(tsaux,crps)
 importFrom(tsaux,mape)
 importFrom(tsaux,mis)
 importFrom(tsaux,msis)
+importFrom(tsaux,mslre)
 importFrom(tsaux,sampling_frequency)
 importFrom(tsaux,smape)
 importFrom(tsdistributions,distribution_modelspec)
